--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.21.0
 alembic==1.17.2
 annotated-doc==0.0.4
 annotated-types==0.7.0
@@ -13,6 +14,7 @@ idna==3.11
 jinja2==3.1.6
 mako==1.3.10
 markupsafe==3.0.3
+psycopg2-binary==2.9.11
 pydantic==2.12.4
 pydantic-core==2.41.5
 python-dotenv==1.2.1
